# brush

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  basics.html  build.sh  cmake.environmentSetupScript.sh  compilation_issue.md  configure  environment-clang.yml  environment.yml  genindex.html  index.html  install  installation.html  lostmonarch.code-workspace  meta.yaml  nodemap.cc  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  setup.py  test.ipynb
.github/workflows/: ci.yml
_sources/: basics.md.txt  index.md  index.md.txt
_sources/cpp_api/: archive.rst  data.rst.txt  engine.rst.txt  evaluation.rst  index.md.txt  individual.rst.txt  node.rst  program.rst.txt  selection.rst.txt  variation.rst
_sources/guide/: archive.ipynb  archive.ipynb.txt  bandits.ipynb.txt  contributing.md  data.md.txt  deap.md  development.md  fixing_nodes.ipynb.txt  index.md  index.md.txt  interactive_archive.ipynb.txt  json.md.txt  saving_loading_populations.ipynb  search_space.ipynb  search_space.ipynb.txt  search_space.md  structure.md  working_with_programs.ipynb  working_with_programs.ipynb.txt
_sources/python_api/: index.md.txt  interface.rst  python_api.rst  regressor.rst
_static/: documentation_options.js
brush/: pybrush.py  versionstr.py
cmake/: FindSphinx.cmake
conda/: meta.yaml
cpp_api/: archive.html  data.html  engine.html  evaluation.html  index.html  individual.html  node.html  nodetypes.html  population.html  program.html  search_space.html  selection.html  timeseries.html  variation.html
data/: brush.schema.json  data.schema.json  example_data.json  feature_map.schema.json
data/OMOP/: README.md
docs/: CMakeLists.txt  Doxyfile.bak  Doxyfile.in  conf.py  cpp_api.rst  index.md  index.rst  python_api.rst  requirements.txt  tree_config
docs/cpp_api/: archive.rst  data.rst  engine.rst  evaluation.rst  index.md  individual.rst  nodetypes.rst  population.rst  search_space.rst  timeseries.rst  variation.rst
docs/examples/: model_visualization.ipynb
docs/examples/datasets/: d_2_sin_x1.csv  d_2_sqrt_x1.csv  d_2x1_divide_3x2.csv  d_2x1_multiply_3x2.csv  d_2x1_plus_3x2.csv  d_2x1_subtract_3x2.csv  d_5x1_multiply_x2_multiply_x3.csv  d_analcatdata_aids.csv  d_analcatdata_happiness.csv  d_sin_0_25x1.csv  d_square_x1_plus_2_x1_x2_plus_square_x2.csv
docs/guide/: archive.ipynb  bandits.ipynb  index.md  interactive_archive.ipynb  program.md  saving_loading_populations.ipynb  search_space.ipynb  structure.md  working_with_programs.ipynb
docs/python_api/: classifier.rst  estimator.rst  index.md  python_api.rst  regressor.rst
doxygen/: annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_000000_000001.html  dir_000000_000002.html  dir_000000_000003.html  dir_000000_000004.html  dir_000000_000005.html  dir_000000_000006.html  dir_000000_000007.html  dir_000000_000009.html  dir_000000_000010.html  dir_000000_000011.html  dir_000000_000012.html  dir_000001_000000.html  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000004.html  dir_000001_000006.html  dir_000001_000008.html  dir_000001_000009.html  dir_000001_000011.html  dir_000001_000012.html  dir_000002_000001.html  dir_000002_000003.html  dir_000002_000005.html  dir_000002_000009.html  dir_000002_000010.html  dir_000002_000011.html  dir_000003_000004.html  dir_000003_000005.html  dir_000003_000006.html  dir_000003_000009.html  dir_000003_000011.html  dir_000004_000006.html  dir_000004_000007.html  dir_000004_000011.html  dir_000005_000003.html  (+597 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+124 more)
doxygen/xml/: Doxyfile.xml  dir_2d96a730aedf75b6c9de709ebcfcca46.xml  dir_5081caf4253f166c37035217032e821c.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_912e27584effbc7a6b259c7c304a5eca.xml  dir_a8ba1cdc789e15ce0e3acecc77cc7168.xml  dir_ac1bb9a98a8a77c3c6ad363e33af8aee.xml  dir_b7878ad5ecbf2506f4125b9d34c97e45.xml  dir_c1be8d27e7f84178e95f152701110b19.xml  dir_c2e0cc19d6853ed6e4afc6dc582757b2.xml  dir_cde4a73b9104bc83640c50feb560e84e.xml  dir_d085e40427aee842e00ca3f050b9ac33.xml  dir_e3a567da2c15e507e3ca56015172bdfe.xml  dir_ea91a2a72b7cbbf988d2bd2cd1d23e49.xml  dir_f89e4c745b153bebdf6a1c6589fa5209.xml  dir_fcbecdb73ef3f8c98dc3c97e19857768.xml  index.xml
drafts/: node.h
guide/: archive.html  bandits.html  contributing.html  data.html  deap.html  development.html  fixing_nodes.html  index.html  interactive_archive.html  json.html  program.html  saving_loading_populations.html  search_space.html  structure.html  working_with_programs.html
pybrush/: BrushEstimator.py  DeapEstimator.py  EstimatorInterface.py  __init__.py  _versionstr.py
pybrush/deap_api/: DeapEstimator.py  __init__.py  nsga2.py
python_api/: classifier.html  estimator.html  index.html  interface.html  python_api.html  regressor.html
src/: Makefile  brushGA.cpp  brushGA.h  brushgp.cc  brushgp.cpp  cbrush.cpp  cbrush.h  data.cc  data.h  dispatch_table.cpp  dispatch_table.h  eigenQuickRef.txt  engine.cpp  engine.h  estimator.cpp  estimator.h  evaluator.cpp  evaluator.h  example.cc  functions.cpp  functions.h  individual.cpp  individual.h  init.h  interpreter.cpp  interpreter.h  main.cc  main.cpp  node.cpp  node.h  nodemap.cpp  nodemap.h  operator.cpp  operator.h  operators.h  params.cc  params.cpp  params.h  population.cpp  population.h  (+19 more)
src/bandit/: bandit.cpp  bandit.h  bandit_operator.cpp  bandit_operator.h  dummy.cpp  dummy.h  linear_thompson.cpp  linear_thompson.h  thompson.cpp  thompson.h
src/bindings/: bind_cbrush.cpp  bind_cbrush.h  (+22 more)
tests/: README.md  program_test.py  test_program.cc  test_program.cpp  test_search_space.cc  test_search_space.cpp  testsHeader.h
(+4264 files in other folders)
